feat(container): finalize container feature
